--- a/CursoLogicaCapitulo04/.project
+++ b/CursoLogicaCapitulo04/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CursoLogicaCapitulo04</name>
+	<name>cursoLogicaCapitulo04</name>
 	<comment></comment>
 	<projects>
 	</projects>
